style: correcting visibility to avoid click in empty space and invoke the inputs

--- a/src/views/Transactions/Add/Calendar/Calendar.module.scss
+++ b/src/views/Transactions/Add/Calendar/Calendar.module.scss
@@ -34,6 +34,7 @@
   opacity: 0;
   padding: var(--spacing-tiny) var(--spacing-base);
   transition: all 300ms ease-in 300ms;
+  visibility: hidden;
   width: 100%;
 
   .calendar__label {
@@ -52,4 +53,5 @@
 .calendar__selected {
   @extend .calendar__unselected;
   opacity: 1;
+  visibility: visible;
 }
