--- a/src/views/Transactions/Add/Categories/Categories.module.scss
+++ b/src/views/Transactions/Add/Categories/Categories.module.scss
@@ -51,6 +51,7 @@
   opacity: 0;
   padding: var(--spacing-tiny) var(--spacing-base);
   transition: all 300ms ease-in 300ms;
+  visibility: hidden;
   width: 100%;
 
   .categories__label {
@@ -69,6 +70,7 @@
 .categories__selected {
   @extend .categories__unselected;
   opacity: 1;
+  visibility: visible;
 }
 
 .categories__modal {
