--- a/src/views/Transactions/Add/Subcategories/Subcategories.module.scss
+++ b/src/views/Transactions/Add/Subcategories/Subcategories.module.scss
@@ -51,6 +51,7 @@
   opacity: 0;
   padding: var(--spacing-tiny) var(--spacing-base);
   transition: all 300ms ease-in 300ms;
+  visibility: hidden;
   width: 100%;
 
   .subcategories__label {
@@ -69,6 +70,7 @@
 .subcategories__selected {
   @extend .subcategories__unselected;
   opacity: 1;
+  visibility: visible;
 }
 
 .subcategories__modal {
